--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
   <script src="assets/vendor/counterup/counterup.min.js"></script>
   <script src="assets/vendor/owl.carousel/owl.carousel.min.js"></script>
   <script src="assets/vendor/aos/aos.js"></script>
+  <script src="https://s0.2mdn.net/ads/studio/Enabler.js"></script>
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
